<resources>
	<string name="app_name" translatable="false">Vitaland</string>
	<string name="title_login">Login</string>
	<string name="title_home">Home</string>
	<string name="title_profile">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="log_in_as_parent">Log in as parent</string>
	<string name="log_in_as_child">Log in as child</string>
	<string name="log_in_as_counselor">Log in as counselor</string>
	<string name="log_in_as_employee">Log in as employee</string>
	<string name="profile_displayed_name" translatable="false">%1$s %2$s</string>
	<string name="profile_button_edit">Edit</string>
	<string name="profile_section_title_children">Children</string>
	<string name="profile_item_button_view">View</string>
	<string name="edit_profile_title">Edit profile</string>
	<string name="edit_profile_first_name_label">First name</string>
	<string name="edit_profile_last_name_label">Last name</string>
	<string name="edit_profile_patronymic_label">Patronymic</string>
	<string name="edit_profile_email_label">E-mail</string>
	<string name="edit_profile_phone_label">Phone number</string>
	<string name="edit_profile_button_apply">Apply</string>
</resources>