<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical">

	<Button
		android:id="@+id/button_login_parent"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/log_in_as_parent" />

	<Button
		android:id="@+id/button_login_child"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/log_in_as_child" />

	<Button
		android:id="@+id/button_login_counselor"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/log_in_as_counselor" />

	<Button
		android:id="@+id/button_login_employee"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/log_in_as_employee" />


</LinearLayout>