<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_login">

	<action
		android:id="@+id/action_global_profile"
		app:destination="@id/navigation_profile" />

	<fragment
		android:id="@+id/navigation_login"
		android:name="gg.solrudev.vitaland.ui.login.LoginFragment"
		android:label="@string/title_login"
		tools:layout="@layout/fragment_login" />

	<fragment
		android:id="@+id/navigation_home"
		android:name="gg.solrudev.vitaland.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_profile"
		android:name="gg.solrudev.vitaland.ui.profile.ProfileFragment"
		android:label="@string/title_profile"
		tools:layout="@layout/fragment_profile">
		<argument
			android:name="user"
			app:argType="gg.solrudev.vitaland.domain.model.User" />
		<argument
			android:name="self"
			app:argType="boolean"
			android:defaultValue="false" />
		<action
			android:id="@+id/action_profileFragment_to_editProfileFragment"
			app:destination="@+id/navigation_edit_profile" />
	</fragment>

	<fragment
		android:id="@+id/navigation_notifications"
		android:name="gg.solrudev.vitaland.ui.notifications.NotificationsFragment"
		android:label="@string/title_notifications"
		tools:layout="@layout/fragment_notifications" />

	<dialog
		android:id="@+id/navigation_edit_profile"
		android:name="gg.solrudev.vitaland.ui.profile.edit.EditProfileFragment"
		android:label="@string/edit_profile_title"
		tools:layout="@layout/bottom_sheet_edit_profile">
		<argument
			android:name="user"
			app:argType="gg.solrudev.vitaland.domain.model.User" />
	</dialog>

</navigation>