<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/edit_profile_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ProgressBar
		android:id="@+id/progressBar_edit_profile_loading"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:indeterminate="true" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/group_edit_profile_top_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/textView_edit_profile_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="12sp"
			android:ellipsize="end"
			android:maxLines="1"
			android:text="@string/edit_profile_title"
			android:textSize="18sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/button_profile_edit"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/button_profile_edit"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/edit_profile_button_apply"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/group_edit_profile_fields"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		tools:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/group_edit_profile_top_bar">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textField_edit_profile_last_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:hint="@string/edit_profile_last_name_label"
			app:layout_constraintBottom_toTopOf="@id/textField_edit_profile_first_name"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textField_edit_profile_first_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:hint="@string/edit_profile_first_name_label"
			app:layout_constraintBottom_toTopOf="@id/textField_edit_profile_patronymic"
			app:layout_constraintTop_toBottomOf="@+id/textField_edit_profile_last_name">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textField_edit_profile_patronymic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:hint="@string/edit_profile_patronymic_label"
			app:layout_constraintBottom_toTopOf="@id/textField_edit_profile_email"
			app:layout_constraintTop_toBottomOf="@+id/textField_edit_profile_first_name">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textField_edit_profile_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:hint="@string/edit_profile_email_label"
			app:layout_constraintBottom_toTopOf="@id/textField_edit_profile_phone"
			app:layout_constraintTop_toBottomOf="@+id/textField_edit_profile_patronymic">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textField_edit_profile_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:hint="@string/edit_profile_phone_label"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textField_edit_profile_email">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>